--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh_CN">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>react-typescript-boilerplate</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,viewport-fit=cover" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="application-name" content="react-ssr-boilerplate" />
+  <meta name="msapplication-starturl" content="/" />
+  <meta name="apple-mobile-web-app-title" content="react-ssr-boilerplate" />
+  <meta name="keyword" content="react,ssr" />
+  <title>Document</title>
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="app">
+    <!-- react-ssr-outlet -->
+  </div>
 </body>
 
 </html>
