fix npm run dev

--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="zh_CN">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,user-scalable=no,viewport-fit=cover"
+    />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="application-name" content="react-ssr-boilerplate" />
+    <meta name="msapplication-starturl" content="/" />
+    <meta name="apple-mobile-web-app-title" content="react-ssr-boilerplate" />
+    <meta name="keyword" content="react,ssr" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,viewport-fit=cover" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="application-name" content="react-ssr-boilerplate" />
-  <meta name="msapplication-starturl" content="/" />
-  <meta name="apple-mobile-web-app-title" content="react-ssr-boilerplate" />
-  <meta name="keyword" content="react,ssr" />
-  <title>Document</title>
-</head>
-
-<body>
-  <div id="app">
-    <!-- react-ssr-outlet -->
-  </div>
-</body>
-
+  <body>
+    <div id="app"><!-- react-ssr-outlet --></div>
+  </body>
 </html>
